--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="de.danielweisser.android.ldapsync" android:versionCode="1"
-	android:versionName="1.0">
+	android:versionName="0.8">
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 	<uses-permission android:name="android.permission.USE_CREDENTIALS" />
 	<uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
@@ -32,24 +32,10 @@
 			</intent-filter>
 			<meta-data android:name="android.content.SyncAdapter"
 				android:resource="@xml/syncadapter" />
-			<!--
-				<meta-data android:name="android.provider.CONTACTS_STRUCTURE"
-				android:resource="@xml/contacts" />
-			-->
 		</service>
-		<!-- 
-		<service android:name="com.funambol.android.services.ContactsSyncAdapterService"
-			android:exported="true">
-			<intent-filter>
-				<action android:name="android.content.SyncAdapter" />
-			</intent-filter>
-			<meta-data android:name="android.content.SyncAdapter"
-				android:resource="@xml/contacts_syncadapter" />
-		</service> -->
 		<activity
 			android:name="de.danielweisser.android.ldapsync.authenticator.LDAPAuthenticatorActivity"
-			android:label="@string/ui_activity_title" android:theme="@android:style/Theme.Dialog"
-			android:excludeFromRecents="true">
+			android:label="@string/ui_activity_title" android:excludeFromRecents="true">
 			<!--
 				No intent-filter here! This activity is only ever launched by
 				someone who explicitly knows the class name
