--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,8 +14,7 @@
 	<uses-permission android:name="android.permission.READ_SYNC_STATS" />
 	<uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
 	<uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
-	<application android:icon="@drawable/icon" android:label="@string/app_name"
-		android:debuggable="true">
+	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
 		<service
 			android:name="de.danielweisser.android.ldapsync.authenticator.LDAPAuthenticationService"
 			android:exported="true">
@@ -42,5 +41,5 @@
 			-->
 		</activity>
 	</application>
-	<uses-sdk android:minSdkVersion="7" />
+	<uses-sdk android:minSdkVersion="5" />
 </manifest> 
