--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,8 +16,7 @@
 	<uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<!-- TODO Set debuggable to false! -->
-	<application android:icon="@drawable/icon" android:label="@string/app_name"
-		android:debuggable="false">
+	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
 		<service
 			android:name="de.danielweisser.android.ldapsync.authenticator.LDAPAuthenticationService"
 			android:exported="true">
