--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="de.danielweisser.android.ldapsync" android:versionCode="7"
-	android:versionName="1.2">
+	package="de.danielweisser.android.ldapsync" android:versionCode="8" android:versionName="1.3">
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 	<uses-permission android:name="android.permission.USE_CREDENTIALS" />
 	<uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
@@ -15,8 +14,7 @@
 	<uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
 	<uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<!-- TODO Set debuggable to false! -->
-	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
 		<service
 			android:name="de.danielweisser.android.ldapsync.authenticator.LDAPAuthenticationService"
 			android:exported="true">
