--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="de.danielweisser.android.ldapsync" android:versionCode="12" android:versionName="1.5">
+	package="de.danielweisser.android.ldapsync" android:versionCode="13" android:versionName="2.0-SNAPSHOT">
+	<uses-sdk android:targetSdkVersion="7" android:minSdkVersion="7" />
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 	<uses-permission android:name="android.permission.USE_CREDENTIALS" />
 	<uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
@@ -14,7 +15,7 @@
 	<uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
 	<uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
+	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<service
 			android:name="de.danielweisser.android.ldapsync.authenticator.LDAPAuthenticationService"
 			android:exported="true">
@@ -41,5 +42,4 @@
 			-->
 		</activity>
 	</application>
-	<uses-sdk android:minSdkVersion="5" />
 </manifest> 
