--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<service
-			android:name="de.danielweisser.android.ldapsync.authenticator.LDAPAuthenticationService"
+			android:name=".authenticator.LDAPAuthenticationService"
 			android:exported="true">
 			<intent-filter>
 				<action android:name="android.accounts.AccountAuthenticator" />
@@ -25,7 +25,7 @@
 			<meta-data android:name="android.accounts.AccountAuthenticator"
 				android:resource="@xml/authenticator" />
 		</service>
-		<service android:name="de.danielweisser.android.ldapsync.syncadapter.SyncService"
+		<service android:name=".syncadapter.SyncService"
 			android:exported="true">
 			<intent-filter>
 				<action android:name="android.content.SyncAdapter" />
@@ -34,12 +34,8 @@
 				android:resource="@xml/syncadapter" />
 		</service>
 		<activity
-			android:name="de.danielweisser.android.ldapsync.authenticator.LDAPAuthenticatorActivity"
+			android:name=".authenticator.LDAPAuthenticatorActivity"
 			android:label="@string/ui_activity_title" android:excludeFromRecents="true">
-			<!--
-				No intent-filter here! This activity is only ever launched by
-				someone who explicitly knows the class name
-			-->
 		</activity>
 	</application>
 </manifest> 
