--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,5 +37,7 @@
 			android:name=".authenticator.LDAPAuthenticatorActivity"
 			android:label="@string/ui_activity_title" android:excludeFromRecents="true">
 		</activity>
+        <activity android:name=".authenticator.AccountSettingsActivity" >
+        </activity>
 	</application>
 </manifest> 
