--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -56,6 +56,8 @@
         </activity>
         <activity android:name=".authenticator.AccountSettingsActivity" >
         </activity>
+        <activity android:name=".authenticator.AccountsListActivity" >
+        </activity>
     </application>
 
 </manifest>
