--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.danielweisser.android.ldapsync"
     android:versionCode="13"
-    android:versionName="2.0-SNAPSHOT" >
+    android:versionName="2.0-SNAPSHOT" android:installLocation="internalOnly">
 
     <uses-sdk
         android:minSdkVersion="7"
-        android:targetSdkVersion="12" />
+        android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
@@ -14,7 +14,6 @@
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.READ_SYNC_STATS" />
@@ -23,12 +22,14 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/LightThemeSelector" >
         <service
             android:name=".authenticator.LDAPAuthenticationService"
-            android:exported="true" >
+            android:exported="true"
+            android:permission="android.permission.MANAGE_ACCOUNTS" >
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
@@ -39,7 +40,8 @@
         </service>
         <service
             android:name=".syncadapter.SyncService"
-            android:exported="true" >
+            android:exported="true"
+            android:permission="android.permission.MANAGE_ACCOUNTS" >
             <intent-filter>
                 <action android:name="android.content.SyncAdapter" />
             </intent-filter>
