--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 			<artifactId>unboundid-ldapsdk</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<pluginManagement>
