--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<packaging>apk</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<android.sdk.path>/home/daniel/Entwicklung/android-sdk-linux</android.sdk.path>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -21,10 +22,16 @@
 			<artifactId>unboundid-ldapsdk</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+		 <dependency>
+            <groupId>com.pivotallabs</groupId>
+            <artifactId>robolectric</artifactId>
+            <version>1.1</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.10</version>
             <scope>test</scope>
 		</dependency>
 	</dependencies>
