--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.danielweisser.android.ldapsync"
-    android:versionCode="13"
-    android:versionName="2.0-SNAPSHOT" android:installLocation="internalOnly">
+    android:versionCode="14"
+    android:versionName="2.1" android:installLocation="internalOnly">
 
 
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
